--- a/3. There are several well-known matching algorithms t.md
+++ b/3. There are several well-known matching algorithms t.md
@@ -1,7 +1,7 @@
 # There are several well-known matching algorithms that are widely used in various applications
 
-Bipartite matching: This algorithm is used to find a matching between two sets of elements such that each element in one set is paired with exactly one element in the other set. This is often used to find the maximum matching in a bipartite graph.
+**Bipartite matching:** This algorithm is used to find a matching between two sets of elements such that each element in one set is paired with exactly one element in the other set. This is often used to find the maximum matching in a bipartite graph.
 
-Hungarian algorithm: This is an algorithm for finding the optimal assignment of tasks to agents in a one-to-one matching scenario. It is used to solve the "assignment problem" in polynomial time.
+**Hungarian algorithm:** This is an algorithm for finding the optimal assignment of tasks to agents in a one-to-one matching scenario. It is used to solve the "assignment problem" in polynomial time.
 
-Stable marriage problem: This is a classic problem in which a set of men and a set of women must be matched in such a way that there is no pair of a man and a woman who would both rather be matched with each other than with their current partners. The Gale-Shapley algorithm is a well-known solution to this problem.
+**Stable marriage problem:** This is a classic problem in which a set of men and a set of women must be matched in such a way that there is no pair of a man and a woman who would both rather be matched with each other than with their current partners. The Gale-Shapley algorithm is a well-known solution to this problem.
