--- a/6. Create a Matching Algorithm using weighted graphs .md
+++ b/6. Create a Matching Algorithm using weighted graphs .md
@@ -1,4 +1,4 @@
-# Create a Matching Algorithm using weighted graphs written JavaScript**
+# Create a Matching Algorithm using weighted graphs written JavaScript
 
 To create this matching algorithm using weighted graphs in JS, we can follow these steps:
 
