--- a/8. More on Dijkstra_s algorithm.md
+++ b/8. More on Dijkstra_s algorithm.md
@@ -6,4 +6,4 @@ The algorithm works by maintaining a priority queue of vertices, with the priori
 
 The time complexity of Dijkstra's algorithm is largely due to the use of the priority queue, which requires logarithmic time for insertions and deletions. In the worst case, the algorithm may have to visit all vertices and edges, leading to a time complexity of O((V+E) log V). However, in practice, the algorithm often terminates earlier, leading to a lower average time complexity.
 
-It's worth noting that Dijkstra's algorithm is not suitable for graphs with negative edge weights, as it can produce incorrect results in such cases. For negative edge weights, Bellman-Ford algorithm or Johnson's algorithm can be used instead.
+It's worth noting that Dijkstra's algorithm is not suitable for graphs with negative edge weights, as it can produce incorrect results in such cases. For negative edge weights, *Bellman-Ford algorithm* or *Johnson's algorithm* can be used instead.
